{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 63,
  "lineage": "7bd7873a-a191-c42e-b16e-a03fd651a0aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f00f4237af54f0f8",
            "arn": "arn:aws:ec2:eu-west-3:342480083349:elastic-ip/eipalloc-0f00f4237af54f0f8",
            "association_id": "eipassoc-078ad4789a63e8fe9",
            "domain": "vpc",
            "id": "eipalloc-0f00f4237af54f0f8",
            "instance": "i-0e93471236b2f7633",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-00c16454210d1f19b",
            "private_dns": "ip-10-0-1-45.eu-west-3.compute.internal",
            "private_ip": "10.0.1.45",
            "public_dns": "ec2-15-236-138-15.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.138.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "techstartup-bastion-eip"
            },
            "tags_all": {
              "Name": "techstartup-bastion-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.bastion",
            "aws_internet_gateway.igw",
            "aws_key_pair.main",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.startuptech_vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0438056e3ee8e5f29",
            "arn": "arn:aws:ec2:eu-west-3:342480083349:elastic-ip/eipalloc-0438056e3ee8e5f29",
            "association_id": "eipassoc-0d277192019560c90",
            "domain": "vpc",
            "id": "eipalloc-0438056e3ee8e5f29",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-050835e55d740ffd7",
            "private_dns": "ip-10-0-1-74.eu-west-3.compute.internal",
            "private_ip": "10.0.1.74",
            "public_dns": "ec2-13-36-81-230.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.81.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "techstartup-nat-eip"
            },
            "tags_all": {
              "Name": "techstartup-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f54908a1f0d2a5b9",
            "arn": "arn:aws:ec2:eu-west-3:342480083349:instance/i-0c7472a58d34b354d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7472a58d34b354d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "newly",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01314e4804be86e29",
            "private_dns": "ip-10-0-11-224.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09716a83d7cda1e37",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f37151c97d79556d",
            "tags": {
              "Name": "techstartup-backend"
            },
            "tags_all": {
              "Name": "techstartup-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d0465145356c00fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.alb_sg",
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_subnet.private",
            "aws_vpc.startuptech_vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f54908a1f0d2a5b9",
            "arn": "arn:aws:ec2:eu-west-3:342480083349:instance/i-0e93471236b2f7633",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e93471236b2f7633",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "newly",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00c16454210d1f19b",
            "private_dns": "ip-10-0-1-45.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.45",
            "public_dns": "ec2-15-236-138-15.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.138.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09dca658b477ccf2b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfabe39d07d9b40d",
            "tags": {
              "Name": "techstartup-bastion"
            },
            "tags_all": {
              "Name": "techstartup-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2dd26b3c8bb7d43"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.startuptech_vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f54908a1f0d2a5b9",
            "arn": "arn:aws:ec2:eu-west-3:342480083349:instance/i-06d45d297abcf8fc7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d45d297abcf8fc7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "newly",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf1a9627ca7ce5e6",
            "private_dns": "ip-10-0-12-81.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000bed369db5638b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070938a295c789fde",
            "tags": {
              "Name": "techstartup-mongodb"
            },
            "tags_all": {
              "Name": "techstartup-mongodb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0e0262da12cb38032"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.alb_sg",
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.mongodb_sg",
            "aws_subnet.private",
            "aws_vpc.startuptech_vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:342480083349:internet-gateway/igw-0457493fa8162cdf3",
            "id": "igw-0457493fa8162cdf3",
            "owner_id": "342480083349",
            "tags": {
              "Name": "techstartup-igw"
            },
            "tags_all": {
              "Name": "techstartup-igw"
            },
            "vpc_id": "vpc-000b69bf526e0f10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:342480083349:loadbalancer/app/techstartup-alb/e5ee2c6974bd9fce",
            "arn_suffix": "app/techstartup-alb/e5ee2c6974bd9fce",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "techstartup-alb-640580184.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:342480083349:loadbalancer/app/techstartup-alb/e5ee2c6974bd9fce",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "techstartup-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-009d03e026c171973"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0baf48d42cfa25b3d"
              },
              {
                "subnet_id": "subnet-0bfabe39d07d9b40d"
              }
            ],
            "subnets": [
              "subnet-0baf48d42cfa25b3d",
              "subnet-0bfabe39d07d9b40d"
            ],
            "tags": {
              "Name": "techstartup-alb"
            },
            "tags_all": {
              "Name": "techstartup-alb"
            },
            "vpc_id": "vpc-000b69bf526e0f10e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:342480083349:listener/app/techstartup-alb/e5ee2c6974bd9fce/131e831b1e75f32e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:342480083349:targetgroup/techstartup-backend-tg/4c29c89f8c338700",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:342480083349:listener/app/techstartup-alb/e5ee2c6974bd9fce/131e831b1e75f32e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:342480083349:loadbalancer/app/techstartup-alb/e5ee2c6974bd9fce",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.backend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:342480083349:targetgroup/techstartup-backend-tg/4c29c89f8c338700",
            "arn_suffix": "targetgroup/techstartup-backend-tg/4c29c89f8c338700",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:342480083349:targetgroup/techstartup-backend-tg/4c29c89f8c338700",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:342480083349:loadbalancer/app/techstartup-alb/e5ee2c6974bd9fce"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "techstartup-backend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "techstartup-backend-tg"
            },
            "tags_all": {
              "Name": "techstartup-backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-000b69bf526e0f10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:342480083349:targetgroup/techstartup-backend-tg/4c29c89f8c338700-20260624145614774300000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:342480083349:targetgroup/techstartup-backend-tg/4c29c89f8c338700",
            "target_id": "i-0c7472a58d34b354d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.backend",
            "aws_key_pair.main",
            "aws_lb_target_group.backend_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_subnet.private",
            "aws_vpc.startuptech_vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0438056e3ee8e5f29",
            "association_id": "eipassoc-0d277192019560c90",
            "connectivity_type": "public",
            "id": "nat-09fb7b94a90cb8e7f",
            "network_interface_id": "eni-050835e55d740ffd7",
            "private_ip": "10.0.1.74",
            "public_ip": "13.36.81.230",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bfabe39d07d9b40d",
            "tags": {
              "Name": "techstartup-nat-gateway"
            },
            "tags_all": {
              "Name": "techstartup-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:342480083349:route-table/rtb-0a1d61c2cf55cd77f",
            "id": "rtb-0a1d61c2cf55cd77f",
            "owner_id": "342480083349",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09fb7b94a90cb8e7f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techstartup-private-rt"
            },
            "tags_all": {
              "Name": "techstartup-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b69bf526e0f10e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:342480083349:route-table/rtb-0ef1b22e8e48df0bf",
            "id": "rtb-0ef1b22e8e48df0bf",
            "owner_id": "342480083349",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0457493fa8162cdf3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techstartup-public-rt"
            },
            "tags_all": {
              "Name": "techstartup-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b69bf526e0f10e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ad272ec324fdd56",
            "route_table_id": "rtb-0a1d61c2cf55cd77f",
            "subnet_id": "subnet-0f37151c97d79556d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.startuptech_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ba3beb9706a8d14",
            "route_table_id": "rtb-0a1d61c2cf55cd77f",
            "subnet_id": "subnet-070938a295c789fde"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0add56e3947f98821",
            "route_table_id": "rtb-0ef1b22e8e48df0bf",
            "subnet_id": "subnet-0bfabe39d07d9b40d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.startuptech_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07855f360acf9fd9b",
            "route_table_id": "rtb-0ef1b22e8e48df0bf",
            "subnet_id": "subnet-0baf48d42cfa25b3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:342480083349:security-group/sg-009d03e026c171973",
            "description": "Allow HTTP/HTTPS from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009d03e026c171973",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "techstartup-alb-sg",
            "name_prefix": "",
            "owner_id": "342480083349",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techstartup-alb-sg"
            },
            "tags_all": {
              "Name": "techstartup-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b69bf526e0f10e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:342480083349:security-group/sg-0d0465145356c00fc",
            "description": "Allow app traffic from ALB and SSH from Bastion only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0465145356c00fc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP 8080 from ALB only",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009d03e026c171973"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2dd26b3c8bb7d43"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techstartup-backend-sg",
            "name_prefix": "",
            "owner_id": "342480083349",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techstartup-backend-sg"
            },
            "tags_all": {
              "Name": "techstartup-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b69bf526e0f10e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:342480083349:security-group/sg-0e2dd26b3c8bb7d43",
            "description": "Allow SSH from my IP only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2dd26b3c8bb7d43",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.208.115.89/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techstartup-bastion-sg",
            "name_prefix": "",
            "owner_id": "342480083349",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techstartup-bastion-sg"
            },
            "tags_all": {
              "Name": "techstartup-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b69bf526e0f10e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:342480083349:security-group/sg-0e0262da12cb38032",
            "description": "Allow MongoDB access from backend only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0262da12cb38032",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MongoDB from backend only",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d0465145356c00fc"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2dd26b3c8bb7d43"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techstartup-mongodb-sg",
            "name_prefix": "",
            "owner_id": "342480083349",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techstartup-mongodb-sg"
            },
            "tags_all": {
              "Name": "techstartup-mongodb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b69bf526e0f10e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:342480083349:subnet/subnet-0f37151c97d79556d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f37151c97d79556d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342480083349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techstartup-private-subnet-1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "techstartup-private-subnet-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-000b69bf526e0f10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.startuptech_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:342480083349:subnet/subnet-070938a295c789fde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070938a295c789fde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342480083349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techstartup-private-subnet-2",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "techstartup-private-subnet-2",
              "Tier": "private"
            },
            "vpc_id": "vpc-000b69bf526e0f10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:342480083349:subnet/subnet-0bfabe39d07d9b40d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfabe39d07d9b40d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342480083349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techstartup-public-subnet-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "techstartup-public-subnet-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-000b69bf526e0f10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.startuptech_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:342480083349:subnet/subnet-0baf48d42cfa25b3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baf48d42cfa25b3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342480083349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techstartup-public-subnet-2",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "techstartup-public-subnet-2",
              "Tier": "public"
            },
            "vpc_id": "vpc-000b69bf526e0f10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.startuptech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "startuptech_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:342480083349:vpc/vpc-000b69bf526e0f10e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d30e3ee399589cb1",
            "default_route_table_id": "rtb-0609c706648d9725c",
            "default_security_group_id": "sg-0b7f0b4cba0796a31",
            "dhcp_options_id": "dopt-0f80547c85190190e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000b69bf526e0f10e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0609c706648d9725c",
            "owner_id": "342480083349",
            "tags": {
              "Name": "startuptech-vpc"
            },
            "tags_all": {
              "Name": "startuptech-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}